crates/tui/tests/storybook/snapshots/app_notify__notify_error_clips_long_summary.snap
---
source: crates/tui/tests/storybook/app_ctx.rs
expression: frame.text()
---

  error  /upgrade: cargo install exi…
────────────────────────────────────────

────────────────────────────────────────
 ○ normal                       1:1 100%
