crates/tui/tests/storybook/snapshots/app_notify__notify_info_short_body_renders_verbatim.snap
---
source: crates/tui/tests/storybook/app_ctx.rs
expression: frame.text()
---

  info  checking for upgrades…
────────────────────────────────────────

────────────────────────────────────────
 ○ normal                       1:1 100%
