crates/tui/tests/storybook/snapshots/app_notify__notify_refits_after_resize.step-1.snap
---
source: crates/tui/tests/storybook/app_ctx.rs
expression: frame.text()
---

  info  update available: v0.6.0 with detailed release notes
────────────────────────────────────────────────────────────────────────

────────────────────────────────────────────────────────────────────────
 ○ normal                                                       1:1 100%
